<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="temp"
                type="com.example.fermat.bouillabaisse.PlayerSelectionFragment"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/playersSelectionRootLayout">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp" android:id="@+id/playersList"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/goToRecapButton"
                tools:background="@android:color/holo_blue_light">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:src="@android:drawable/ic_menu_compass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"/>
                <TextView
                        android:text="@string/player_1_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical" android:textSize="18sp"
                        android:layout_weight="1"/>
                <TextView
                        android:text=":"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                <EditText
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:tag="player_name"
                        android:hint="Player Name" android:layout_width="0dp"
                        tools:text="ABCDEFGHIJKLMNOPQRSTU" android:maxLength="21"
                        android:maxLines="1" android:layout_weight="3" android:singleLine="true"
                        android:selectAllOnFocus="true" android:linksClickable="false"
                        android:hapticFeedbackEnabled="true"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:src="@android:drawable/ic_menu_compass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"/>
                <TextView
                        android:text="@string/player_2_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical" android:textSize="18sp"
                        android:layout_weight="1"/>
                <TextView
                        android:text=":"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                <EditText
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:tag="player_name"
                        android:hint="Player Name" android:layout_width="0dp"
                        tools:text="ABCDEFGHIJKLMNOPQRSTU" android:maxLength="21"
                        android:maxLines="1" android:layout_weight="3"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:src="@android:drawable/ic_menu_compass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"/>
                <TextView
                        android:text="@string/player_3_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical" android:textSize="18sp"
                        android:layout_weight="1"/>
                <TextView
                        android:text=":"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                <EditText
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:tag="player_name"
                        android:hint="Player Name" android:layout_width="0dp"
                        tools:text="ABCDEFGHIJKLMNOPQRSTU" android:maxLength="21"
                        android:maxLines="1" android:layout_weight="3"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:src="@android:drawable/ic_menu_compass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"/>
                <TextView
                        android:text="@string/player_4_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="right|center_vertical" android:textSize="18sp"
                        android:layout_weight="1"/>
                <TextView
                        android:text=":"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"/>
                <EditText
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:tag="player_name"
                        android:hint="Player Name" android:layout_width="0dp"
                        tools:text="ABCDEFGHIJKLMNOPQRSTU" android:maxLength="21"
                        android:maxLines="1" android:layout_weight="3"/>
            </LinearLayout>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:src="@android:drawable/ic_menu_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true" android:id="@+id/addAdditionalPlayerField"/>

        </LinearLayout>
        <Button
                android:id="@+id/goToRecapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_play_button_text"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>